# fastapi-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/router/: __init__.py
app/common/enums/: __init__.py
app/common/schemas/: pagination.py  response.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py
app/db/: base.py  mixins.py  models_registry.py  session.py  types.py  unit_of_work.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_enable_extensions.py  0002_core_schema.py  0003_permission_name.py  0004_perm_res_act_int.py  0005_permission_code_int.py
app/db/repositories/: base.py
app/integrations/oauth/: providers.py
app/middleware/: request_context.py  security_headers.py
app/modules/auth/: mfa_service.py  models.py  router.py  schemas.py  service.py  token_service.py
app/modules/categories/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/customers/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/dealers/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/farmers/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/health/: router.py
app/modules/permissions/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/products/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/roles/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/suppliers/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
app/monitoring/: metrics.py
app/workers/: celery_app.py
app/workers/tasks/: audit.py  email.py
deploy/: prometheus.yml
deploy/docker/: Dockerfile
deploy/nginx/: nginx.conf
docs/: ARCHITECTURE.md  DEVELOPER_DOCUMENTATION.md
tests/: conftest.py  test_smoke.py
