[project]
name = "crm-backend"
version = "1.0.0"
description = "Enterprise CRM backend — FastAPI, SQLAlchemy 2.0 async, PostgreSQL, Redis, Celery."
requires-python = ">=3.13"
readme = "README.md"

# Runtime dependencies. Pinned by major; lock exact versions with `uv lock` / `pip-compile`.
dependencies = [
    # --- Web framework ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",            # process manager in front of uvicorn workers in prod
    # --- Validation / settings ---
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",            # async PostgreSQL driver
    "alembic>=1.14",
    "psycopg[binary]>=3.2",     # sync driver, used by Alembic offline / scripts
    # --- Cache / broker ---
    "redis[hiredis]>=5.2",
    "celery>=5.4",
    "flower>=2.0",              # Celery monitoring UI
    # --- Security ---
    "argon2-cffi>=23.1",        # Argon2id password hashing
    "pyjwt[crypto]>=2.10",      # JWT (RS256/HS256)
    "pyotp>=2.9",               # TOTP MFA
    "authlib>=1.4",             # OAuth2 clients (Google, Microsoft)
    "itsdangerous>=2.2",        # signed tokens (email verification, CSRF)
    "bleach>=6.2",              # HTML/XSS input sanitization
    # --- Observability ---
    "structlog>=24.4",          # structured JSON logging
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.19",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # --- Misc ---
    "httpx>=0.28",              # async HTTP client (OAuth, webhooks)
    "tenacity>=9.0",            # retries with backoff
    "slowapi>=0.1.9",           # rate limiting helper (Redis backed)
    "python-multipart>=0.0.18", # file uploads / form parsing
    "boto3>=1.35",              # S3-compatible object storage
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "faker>=33.0",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.14",
    "types-redis",
    "pre-commit>=4.0",
    "asgi-lifespan>=2.1",       # lifespan in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --------------------------------------------------------------------------- #
# Ruff — linter + import sorter (replaces flake8, isort, pyupgrade, etc.)
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "ASYNC",     # async correctness
    "S",         # bandit (security)
    "T20",       # no print()
    "SIM",       # simplify
    "RUF",
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]
"app/db/migrations/**" = ["E501", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --------------------------------------------------------------------------- #
# Black — opinionated formatter (Ruff handles lint; Black owns formatting)
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 100
target-version = ["py313"]

# --------------------------------------------------------------------------- #
# Mypy — strict static typing
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["app/db/migrations/"]

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: pure-logic tests, no I/O",
    "integration: tests hitting a real DB/Redis",
    "api: full request/response tests through the ASGI app",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/db/migrations/*", "app/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
