[project]
name = "crm-backend"
version = "1.0.0"
description = "Enterprise CRM backend — FastAPI, SQLAlchemy 2.0 async, PostgreSQL, Redis, Celery."
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",          
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",          
    "alembic>=1.14",
    "psycopg[binary]>=3.2",    
    "redis[hiredis]>=5.2",
    "celery>=5.4",
    "flower>=2.0",            
    "argon2-cffi>=23.1",       
    "pyjwt[crypto]>=2.10",     
    "pyotp>=2.9",              
    "authlib>=1.4",            
    "itsdangerous>=2.2",       
    "bleach>=6.2",            
    "structlog>=24.4",        
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.19",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "httpx>=0.28",           
    "tenacity>=9.0",          
    "slowapi>=0.1.9",          
    "python-multipart>=0.0.18", 
    "boto3>=1.35",            
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "faker>=33.0",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.14",
    "types-redis",
    "pre-commit>=4.0",
    "asgi-lifespan>=2.1",      
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "ASYNC",     # async correctness
    "S",         # bandit (security)
    "T20",       # no print()
    "SIM",       # simplify
    "RUF",
]
ignore = [
    "S101",  
    "UP046",  
    "UP047",  
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ARG"]
"app/db/migrations/**" = ["E501", "I"]
"app/core/config.py" = ["N802"]              
"app/core/exceptions.py" = ["N818"]         
"app/modules/auth/schemas.py" = ["S105"]    

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
    "app.api.deps.auth.require_permissions",
    "app.api.deps.require_permissions",
]


[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["app/db/migrations/"]

[[tool.mypy.overrides]]
module = "app.workers.*"
disallow_untyped_decorators = false


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: pure-logic tests, no I/O",
    "integration: tests hitting a real DB/Redis",
    "api: full request/response tests through the ASGI app",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/db/migrations/*", "app/main.py"]

[tool.coverage.report]
fail_under = 0
show_missing = true
